--- a/app/views/albums/show.html.haml
+++ b/app/views/albums/show.html.haml
@@ -10,8 +10,10 @@
 
     .album-button
       = link_to "Info", @album.info_url, class: 'pure-button' if @album.info_url
-      = button_tag "Play", type: 'button', class: 'play-button pure-button pure-button-primary' if @album.tracklist?
-      = link_to "Open", @album.download_url, data: {popup: true}, class: 'pure-button' if @album.download_url
+      - if current_user&.upload_access?
+        = button_tag "Play", type: 'button', class: 'play-button pure-button pure-button-primary' if @album.tracklist?
+        = link_to "Open", @album.download_url, data: {popup: true}, class: 'pure-button' if @album.download_url
+
       .minor-links
         =link_to "Dodaj na listu", new_user_list_album_path(album_id: @album.id)
         |
@@ -31,5 +33,5 @@
     - @album.user_ratings.includes(:user).order("created_at").each do |user_rating|
       = render partial: 'albums/user_rating', object: user_rating
 
-    - if !current_user.rated_album?(@album)
+    - if current_user && @album.rated_by?(current_user.id)
       = render 'rating_form'
