--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,18 +1,13 @@
 !!! 5
 %html
   %head
-  %title Jugosluh
-  %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
-  %link{:href => '/favicon.ico', :rel => 'shortcut icon'}
-  = csrf_meta_tags
-
-  = stylesheet_link_tag "http://yui.yahooapis.com/pure/0.5.0/pure-min.css"
-  = stylesheet_link_tag "application", media: 'all'
-
-  = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=latin,latin-ext"
-
-  /[if lt IE 9]
-    = javascript_include_tag "https://html5shim.googlecode.com/svn/trunk/html5.js"
+    %title Jugosluh
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
+    = favicon_link_tag '/favicon.ico'
+    = stylesheet_link_tag "http://yui.yahooapis.com/pure/0.5.0/pure-min.css"
+    = stylesheet_link_tag "application", media: 'all'
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=latin,latin-ext"
+    = csrf_meta_tags
 
   %body
     .notice= notice
@@ -24,5 +19,4 @@
     .content
       = yield
 
-    = javascript_include_tag "https://code.jquery.com/jquery-1.11.3.min.js"
     = javascript_include_tag "application"
