--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,5 +1,5 @@
 .home-page {
-  
+
   .stats {
     .bar {
       position: relative;
@@ -9,40 +9,40 @@
       border-radius: 5px;
       margin: auto;
     }
-    
-    .listened, .uploaded {
+
+    .listened, .available {
       position: absolute;
       top: 0; left: 0;
       height: 100%;
     }
-    
+
     .listened { background-color: #4db849;}
-    .uploaded { background-color: #0078e7;}
-    
+    .available { background-color: #0078e7;}
+
     .legend {
       margin-top: 5px;
     }
   }
 
   .start-actions {
-    
+
     .settings-link {
       display: block;
       margin-top: 5px;
       font-size: 12px;
     }
     .or { margin: 15px 0;}
-  
-    .tag-link { 
+
+    .tag-link {
       margin: 0 5px;
       padding: 5px 10px;
       background: #eee;
       text-decoration: none;
-      
+
       &:hover { background-color: #0078e7; color: white;}
     }
   }
-  
+
   .latest-comments {
     .user-rating { margin-bottom: 5px;}
     .user-rating-location {
@@ -50,5 +50,5 @@
       margin-bottom: 60px;
     }
   }
-  
+
 }
